# voteminder

./: LICENSE  Makefile  Makefile.in  README  configure.in  debug.cpp  debug.h  example.input.txt  main.cpp  os.cpp  os.h  parse.cpp  parse.h  todo.txt  util.cpp  util.h
